--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: mm-studios.com
 
 Package: disem
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, xsltproc
 Description: Disemination of projects from svn development repository
  Project disemination from development repository. It patches source code with headers.
